Folder structure repairing